<resources>
    <string name="app_name">FRIDGE PAL</string>
    <string name="login" translatable="false">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Fridge</string>
    <string name="tab_text_2">Recipes</string>
    <string name="tab_text_3">Grocery List</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="days">
        <item> Sunday</item>
        <item> Monday</item>
        <item> Tuesday</item>
        <item> Wednesday</item>
        <item> Thursday</item>
        <item> Friday</item>
        <item> Saturday</item>

    </string-array>

    <string-array name="diet">
        <item> Vegetarian</item>
        <item> Vegan</item>
        <item> Gluten Free</item>
        <item> Pescatarian</item>
    </string-array>

    <string name="nextToDiet_button">Next</string>
    <string name="nextToConfirm_button">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recipes_fragment">Recipes Fragment</string>
    <string name="textview">TextView</string>
    <string name="card_view">TextView</string>
    <string name="confirm_button">Confirm</string>
    <string name="diet_text">What\'s your Dietary Preference?</string>
    <string name="grocery_text">What\'s your Grocery Day?</string>


    <!-- Fridge & Food Assets -->
    <string name="food_name_label">Food Name</string>
    <string name="food_category_label">Food Category</string>
    <string name="date_added_label">Date Added</string>
    <string name="expiry_date_label">Expiry Date</string>
    <string name="is_favorite">Favorite</string>
    <string name="delete_food_label">Delete Food</string>
    <string name="add_food_name">Add food name</string>
    <string name="add_food_name_hint">Please type in the food name.</string>
    <string name="select_food_category">Select Food Category</string>
    <string-array name="food_category_list">
        <item>Meat</item>
        <item>Dairy</item>
        <item>Fruit</item>
        <item>Vegetable</item>
    </string-array>
    <string name="date_of_purchase">Select Date of Purchase</string>
    <string name="date_of_expiry">Select Date of Expiration</string>
    <string name="add_food_button">Add Food</string>

    <string name="confirm_grocery_text">Your Grocery day is </string>
    <string name="confirm_dietary_text">Your preferred Dietary is </string>

    <string name="grocery_day_title">Grocery Day</string>

    <string-array name="pref_days_entries">
        <item> Sunday</item>
        <item> Monday</item>
        <item> Tuesday</item>
        <item> Wednesday</item>
        <item> Thursday</item>
        <item> Friday</item>
        <item> Saturday</item>

    </string-array>

    <string name="grocery_day_default">Sunday</string>

    <string-array name="pref_days_values">
        <item> Sunday</item>
        <item> Monday</item>
        <item> Tuesday</item>
        <item> Wednesday</item>
        <item> Thursday</item>
        <item> Friday</item>
        <item> Saturday</item>

    </string-array>

    <string-array name="pref_diet_entries">
        <item> Vegetarian</item>
        <item> Vegan</item>
        <item> Gluten Free</item>
        <item> Pescatarian</item>
    </string-array>

    <string name="pref_diet_default">Vegetarian</string>

    <string-array name="pref_diet_values">
        <item> Vegetarian</item>
        <item> Vegan</item>
        <item> Gluten Free</item>
        <item> Pescatarian</item>
    </string-array>
    <string name="title_activity_suggested_recipes">SuggestedRecipesActivity</string>
    <string name="suggested_recipes">Suggested Recipes</string>

</resources>

