<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:layout_width="match_parent"
        android:defaultValue="@string/grocery_day_default"
        android:dialogTitle="Select Grocery Day"
        android:entries="@array/pref_days_entries"
        android:entryValues="@array/pref_days_values"
        android:key="pref_grocery_day"
        android:summary="Sunday"
        android:title="@string/grocery_day_title"
        android:id="@+id/pref_grocery_day"/>

    <ListPreference
        android:layout_width="match_parent"
        android:defaultValue="@string/pref_diet_default"
        android:dialogTitle="Select Dietary Preference"
        android:entries="@array/pref_diet_entries"
        android:entryValues="@array/pref_diet_values"
        android:key="pref_diet"
        android:summary="Vegetarian"
        android:title="Dietary Preference"
        android:id="@+id/pref_diet"/>

    <CheckBoxPreference
        android:layout_width="match_parent"
        android:defaultValue="true"
        android:key="pref_notifications"
        android:summary="Receive alerts before food expires"
        android:title="Notifications"
        android:id="@+id/pref_notifications"/>


</PreferenceScreen>